@@ -29,6 +29,7 @@ of the data, including various window functions and time averaging.
 
 import os
 import sys
+import ephem
 import numpy
 
 from lsl.common.constants import c as vLight
@@ -40,7 +41,7 @@ import _spec
 import _stokes
 import _core
 
-__version__ = '0.9'
+__version__ = '1.0'
 __revision__ = '$Rev$'
 __all__ = ['pol2pol', 'noWindow', 'SpecMaster', 'StokesMaster', 'FXMaster', 'FXStokes', '__version__', '__revision__', '__all__']
 
@@ -179,22 +180,28 @@ def StokesMaster(signals, antennas, LFFT=64, window=noWindow, verbose=False, Sam
 	return (freq, output)
 
 
-def FXMaster(signals, antennas, LFFT=64, Overlap=1, IncludeAuto=False, verbose=False, window=noWindow, SampleRate=None, CentralFreq=0.0, Pol='XX', GainCorrect=False, ReturnBaselines=False, ClipLevel=0, phaseCenter=(0.0, 90.0)):
+def FXMaster(signals, antennas, LFFT=64, Overlap=1, IncludeAuto=False, verbose=False, window=noWindow, SampleRate=None, CentralFreq=0.0, Pol='XX', GainCorrect=False, ReturnBaselines=False, ClipLevel=0, phaseCenter='z'):
 	"""
 	A more advanced version of FXCorrelator for TBW and TBN data.  Given an 
 	2-D array of signals (stands, time-series) and an array of stands, compute 
 	the cross-correlation of the data for all baselines.  Return the frequencies 
 	and visibilities as a two-elements tuple.
 	
-	.. versionchanged:: 0.4.0
-		Switched over to passing in Antenna instances generated by the
-		:mod:`lsl.common.stations` module instead of a list of stand ID
-		numbers.
+	.. versionchanged:: 1.1.0
+		Made the 'phaseCenter' keyword more flexible.  It can now be either:
+		 * 'z' to denote the zenith,
+		 * a ephem.Body instances which has been computed for the observer, or
+		 * a two-element tuple of azimuth, elevation in degrees.
 		
 	.. versionchanged:: 1.0.0
 		Added a phase-center keyword that accept a two-element tuple of 
 		azimuth and elelvation (in degrees) to change where the 
 		correlations are phased to
+		
+	.. versionchanged:: 0.4.0
+		Switched over to passing in Antenna instances generated by the
+		:mod:`lsl.common.stations` module instead of a list of stand ID
+		numbers.
 	"""
 	
 	# Decode the polarization product into something that we can use to figure 
@@ -235,8 +242,13 @@ def FXMaster(signals, antennas, LFFT=64, Overlap=1, IncludeAuto=False, verbose=F
 		azPC = 0.0
 		elPC = numpy.pi/2.0
 	else:
-		azPC = phaseCenter[0]*numpy.pi/180.0
-		elPC = phaseCenter[1]*numpy.pi/180.0
+		if isinstance(phaseCenter, ephem.Body):
+			azPC = phaseCenter.az * 1.0
+			elPC = phaseCenter.alt * 1.0
+		else:
+			azPC = phaseCenter[0]*numpy.pi/180.0
+			elPC = phaseCenter[1]*numpy.pi/180.0
+			
 	source = numpy.array([numpy.cos(elPC)*numpy.sin(azPC), 
 					  numpy.cos(elPC)*numpy.cos(azPC), 
 					  numpy.sin(elPC)])
@@ -320,13 +332,19 @@ def FXMaster(signals, antennas, LFFT=64, Overlap=1, IncludeAuto=False, verbose=F
 	return returnValues
 
 
-def FXStokes(signals, antennas, LFFT=64, Overlap=1, IncludeAuto=False, verbose=False, window=noWindow, SampleRate=None, CentralFreq=0.0,  GainCorrect=False, ReturnBaselines=False, ClipLevel=0, phaseCenter=(0.0, 90.0)):
+def FXStokes(signals, antennas, LFFT=64, Overlap=1, IncludeAuto=False, verbose=False, window=noWindow, SampleRate=None, CentralFreq=0.0,  GainCorrect=False, ReturnBaselines=False, ClipLevel=0, phaseCenter='z'):
 	"""
 	A more advanced version of FXCorrelator for TBW and TBN data.  Given an 
 	2-D array of signals (stands, time-series) and an array of stands, compute 
 	the cross-correlation of the data for all baselines.  Return the frequencies 
 	and visibilities as a two-elements tuple.
 	
+	.. versionchanged:: 1.1.0
+		Made the 'phaseCenter' keyword more flexible.  It can now be either:
+		 * 'z' to denote the zenith,
+		 * a ephem.Body instances which has been computed for the observer, or
+		 * a two-element tuple of azimuth, elevation in degrees.
+		 
 	.. versionchanged:: 1.0.0
 		Added a phase-center keyword that accept a two-element tuple of 
 		azimuth and elelvation (in degrees) to change where the 
@@ -371,8 +389,12 @@ def FXStokes(signals, antennas, LFFT=64, Overlap=1, IncludeAuto=False, verbose=F
 		azPC = 0.0
 		elPC = numpy.pi/2.0
 	else:
-		azPC = phaseCenter[0]*numpy.pi/180.0
-		elPC = phaseCenter[1]*numpy.pi/180.0
+		if isinstance(phaseCenter, ephem.Body):
+			azPC = phaseCenter.az * 1.0
+			elPC = phaseCenter.alt * 1.0
+		else:
+			azPC = phaseCenter[0]*numpy.pi/180.0
+			elPC = phaseCenter[1]*numpy.pi/180.0
 	source = numpy.array([numpy.cos(elPC)*numpy.sin(azPC), 
 					  numpy.cos(elPC)*numpy.cos(azPC), 
 					  numpy.sin(elPC)])
